QPID-8209: race in queue deletion causes infinite recursion in autodelete